# mood_ros

./: CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml
cfg/: BlobDetectorParams.cfg
config/: blob_detector_config.yaml  blob_detector_rqt_sim.perspective  blob_detector_sim.rviz  detection_manager_config.yaml
include/mood_ros/: detection_tracker.hpp  detector_interface.hpp  msg_sync_interface.hpp  sensor_comm.hpp
launch/: detection_manager.launch  detection_manager_nodelet.launch  nodelet_manager.launch
nodes/: detection_manager.cpp  detection_manager_nodelet.cpp
src/: blob_detector.cpp  detection_manager.cpp  double_msg_sync.cpp  single_msg_sync.cpp
startup/blender_detector_test/: README.md  session.yml
startup/blender_detector_test/custom_config/: blender_detector.perspective  blender_detector.rviz  blob_detector_config.yaml  detection_manager_config.yaml
startup/kopterworx_rgbd_blob_wall/: README.md  session.yml
startup/realsense_optitrack_blob/: README.md  layout.json  session.yml
startup/realsense_optitrack_blob/custom_config/: blob_detector_config.yaml  blob_detector_config_calibration.yaml  detection_manager_config.yaml  lkf_config.yaml  realsense_optitrack_blob.perspective  rviz_realsense_optitrack.rviz
startup/realsense_optitrack_calibration/: session.yml
